--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,46 @@ buildNumber.properties
 ./settings
 ./project
 ./target
+/target/
+/.settings/
+/.metadata/
+/Testing/.settings/
+/Testing/pom.xml
+/Testing/target/
+Testing/target/*.*
+/Testing/.classpath
+/Testing/.project
+/RemoteSystemsTempFiles/
+/Servers/
+/.recommenders/
+.recommenders/
+.metadata/
+.sonarlint/
+/.sonarlint/
+Testing/.settings/
+Testing/target/
+Testing/.classpath
+Testing/.project
+/maven/
+/Testing/maven/
+/repository
+/Testing/repository/*.*
+/repository/*.*
+/target/
+/.project
+/.settings/
+/.classpath
+/Testing/.settings/org.eclipse.jdt.core.prefs
+/Testing/.settings/org.eclipse.wst.common.component
+/Testing/.settings/org.eclipse.wst.common.project.facet.core.xml
+/Testing/.settings/.jsdtscope
+/Testing/.settings/org.eclipse.m2e.core.prefs
+/Testing/.settings/org.eclipse.wst.jsdt.ui.superType.container
+/Testing/.settings/org.eclipse.wst.jsdt.ui.superType.name
+/.settings/org.eclipse.jdt.core.prefs
+/.settings/org.eclipse.wst.common.component
+/.settings/org.eclipse.wst.common.project.facet.core.xml
+/.settings/.jsdtscope
+/.settings/org.eclipse.m2e.core.prefs
+/.settings/org.eclipse.wst.jsdt.ui.superType.container
+/.settings/org.eclipse.wst.jsdt.ui.superType.name
