--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ Testing/.project
 /.settings/org.eclipse.m2e.core.prefs
 /.settings/org.eclipse.wst.jsdt.ui.superType.container
 /.settings/org.eclipse.wst.jsdt.ui.superType.name
+./bin
+./bin/gitattributes
+/bin/
